update prismic content

--- a/index.html
+++ b/index.html
@@ -363,28 +363,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="home-part-marquee hidden-dk">
-                        <div class="home-part-marquee-inner">
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-6.png" alt="Partner">
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </section>
             <section class="home-prob">
@@ -512,74 +490,9 @@
                                     <h4 class="heading h6 home-sol-item-title">
                                         Port-specific Solution
                                     </h4>
-                                    <p class="txt txt-20 home-sol-item-body">
+                                    <div class="txt txt-20 home-sol-item-body">
                                         Tailored to port's pilot station and includes seasonality
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="home-sol-item">
-                                <div class="icon icon-64 home-sol-item-ic">
-                                    <img src="./imgs/problems/Circle.svg" alt="Icon">
-                                </div>
-                                <div class="home-sol-item-title-wrap">
-                                    <h4 class="heading h6 home-sol-item-title">
-                                        Global Coverage
-                                    </h4>
-                                    <p class="txt txt-20 home-sol-item-body">
-                                        Worldwide coverage through satellite AIS data partners
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="home-sol-item">
-                                <div class="icon icon-64 home-sol-item-ic">
-                                    <img src="./imgs/problems/Circle.svg" alt="Icon">
-                                </div>
-                                <div class="home-sol-item-title-wrap">
-                                    <h4 class="heading h6 home-sol-item-title">
-                                        Prediction Confidence
-                                    </h4>
-                                    <p class="txt txt-20 home-sol-item-body">
-                                        Prediction reliability indictor to present a true picture
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="home-sol-item">
-                                <div class="icon icon-64 home-sol-item-ic">
-                                    <img src="./imgs/problems/Circle.svg" alt="Icon">
-                                </div>
-                                <div class="home-sol-item-title-wrap">
-                                    <h4 class="heading h6 home-sol-item-title">
-                                        Highest 48hrs Accuracy
-                                    </h4>
-                                    <p class="txt txt-20 home-sol-item-body">
-                                        Customized algorithms and in-depth domain expertise
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="home-sol-item">
-                                <div class="icon icon-64 home-sol-item-ic">
-                                    <img src="./imgs/problems/Circle.svg" alt="Icon">
-                                </div>
-                                <div class="home-sol-item-title-wrap">
-                                    <h4 class="heading h6 home-sol-item-title">
-                                        Early Warning System
-                                    </h4>
-                                    <p class="txt txt-20 home-sol-item-body">
-                                        Real-time alerting in case of delays and abnormalities
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="home-sol-item">
-                                <div class="icon icon-64 home-sol-item-ic">
-                                    <img src="./imgs/problems/Circle.svg" alt="Icon">
-                                </div>
-                                <div class="home-sol-item-title-wrap">
-                                    <h4 class="heading h6 home-sol-item-title">
-                                        10 min update
-                                    </h4>
-                                    <p class="txt txt-20 home-sol-item-body">
-                                        Data update interval of about 10 minutes for all ship types
-                                    </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -613,23 +526,23 @@
                                     Satellites
                                 </h4>
                                 <p class="txt txt-20 home-tech-item-body">
-                                    Lorem ipsum dolor sit amet consectetur. Sed dui at leo dolor nulla neque volutpat erat varius. In imperdiet nibh netus.
+                                    Our advanced satellites drive maritime innovation, enabling precise tracking and environmental monitoring.
                                 </p>
                             </div>
                             <div class="home-tech-item">
                                 <h4 class="heading h6 home-tech-item-title">
-                                    Satellites
+                                    Cutting-edge AI algorithms
                                 </h4>
                                 <p class="txt txt-20 home-tech-item-body">
-                                    Lorem ipsum dolor sit amet consectetur. Sed dui at leo dolor nulla neque volutpat erat varius. In imperdiet nibh netus.
+                                    Our AI algorithms optimize operations and decision-making, setting new industry standards.
                                 </p>
                             </div>
                             <div class="home-tech-item">
                                 <h4 class="heading h6 home-tech-item-title">
-                                    Satellites
+                                    Real-time data sources
                                 </h4>
                                 <p class="txt txt-20 home-tech-item-body">
-                                    Lorem ipsum dolor sit amet consectetur. Sed dui at leo dolor nulla neque volutpat erat varius. In imperdiet nibh netus.
+                                    Live data feeds power our solutions, enabling informed, safe, and sustainable decisions.
                                 </p>
                             </div>
                         </div>
