--- a/insight.html
+++ b/insight.html
@@ -266,10 +266,10 @@
                                             2023
                                         </div>
                                         <h4 class="heading h6 ins-news-main-item-title">
-                                            SPACE-SHIP Sets Sail into the Future of Maritime Technology
+                                            Loading...
                                         </h4>
                                         <p class="txt txt-18 ins-news-main-item-name">
-                                            MaritimeInsider
+                                            Loading...
                                         </p>
                                     </div>
                                     <div class="line">
@@ -297,11 +297,11 @@
                                 </div>
                                 <div class="ins-art-main-item-content">
                                     <h3 class="heading h4 ins-art-main-item-title">
-                                        Revolutionizing Maritime Technology: A Look into the Future
+                                        Loading...
                                     </h3>
                                     <div class="ins-art-main-item-info">
                                         <div class="label-wrap ins-art-main-item-label">
-                                            <div class="txt txt-16 txt-med">March, 2023</div>
+                                            <div class="txt txt-16 txt-med">..., 2023</div>
                                         </div>
                                         <div class="txt txt-16 ins-art-main-item-link">
                                             View detail
@@ -309,66 +309,6 @@
                                                 <div class="line-inner"></div>
                                             </div>
                                         </div>
-                                    </div>
-                                </div>
-                                <div class="line">
-                                    <div class="line-inner"></div>
-                                </div>
-                            </a>
-                            <a href="#" class="ins-art-main-item hover-arr">
-                                <div class="ins-art-main-item-thumb">
-                                    <img src="./imgs/ins-art-thumb.jpg" alt="Port">
-                                </div>
-                                <div class="ins-art-main-item-content">
-                                    <div class="label-wrap ins-art-main-item-label">
-                                        <div class="txt txt-16 txt-med">March, 2022</div>
-                                    </div>
-                                    <h3 class="heading h4 ins-art-main-item-title">
-                                        Revolutionizing Maritime Technology: A Look into the Future
-                                    </h3>
-                                </div>
-                                <div class="icon icon-28 arr-wrap">
-                                    <div class="ic-arr-main">
-                                        <svg width="100%" height="100%" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M26.6351 3.22139L2.62502 27.2315L0.76886 25.3753L24.779 1.36523L26.6351 3.22139Z" fill="currentColor"/>
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M3.9375 1.3125H26.6875V24.0625H24.0625V3.9375H3.9375V1.3125Z" fill="currentColor"/>
-                                        </svg>
-                                    </div>
-                                    <div class="ic-arr-clone">
-                                        <svg width="100%" height="100%" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M26.6351 3.22139L2.62502 27.2315L0.76886 25.3753L24.779 1.36523L26.6351 3.22139Z" fill="currentColor"/>
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M3.9375 1.3125H26.6875V24.0625H24.0625V3.9375H3.9375V1.3125Z" fill="currentColor"/>
-                                        </svg>
-                                    </div>
-                                </div>
-                                <div class="line">
-                                    <div class="line-inner"></div>
-                                </div>
-                            </a>
-                            <a href="#" class="ins-art-main-item hover-arr">
-                                <div class="ins-art-main-item-thumb">
-                                    <img src="./imgs/ins-art-thumb.jpg" alt="Port">
-                                </div>
-                                <div class="ins-art-main-item-content">
-                                    <div class="label-wrap ins-art-main-item-label">
-                                        <div class="txt txt-16 txt-med">March, 2022</div>
-                                    </div>
-                                    <h3 class="heading h4 ins-art-main-item-title">
-                                        Revolutionizing Maritime Technology: A Look into the Future
-                                    </h3>
-                                </div>
-                                <div class="icon icon-28 arr-wrap">
-                                    <div class="ic-arr-main">
-                                        <svg width="100%" height="100%" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M26.6351 3.22139L2.62502 27.2315L0.76886 25.3753L24.779 1.36523L26.6351 3.22139Z" fill="currentColor"/>
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M3.9375 1.3125H26.6875V24.0625H24.0625V3.9375H3.9375V1.3125Z" fill="currentColor"/>
-                                        </svg>
-                                    </div>
-                                    <div class="ic-arr-clone">
-                                        <svg width="100%" height="100%" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M26.6351 3.22139L2.62502 27.2315L0.76886 25.3753L24.779 1.36523L26.6351 3.22139Z" fill="currentColor"/>
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M3.9375 1.3125H26.6875V24.0625H24.0625V3.9375H3.9375V1.3125Z" fill="currentColor"/>
-                                        </svg>
                                     </div>
                                 </div>
                                 <div class="line">
