--- a/term.html
+++ b/term.html
@@ -355,7 +355,7 @@
                                     <label for="email" class="txt txt-20 txt-med input-label">
                                         Enter your email
                                     </label>
-                                    <input type="email" class="txt txt-20 input-field" name="email">
+                                    <input type="email" class="txt txt-20 input-field" name="email" placeholder="Enter your email">
                                 </div>
                                 <div class="ft-abt-form-btn-wrap">
                                     <button type="submit" class="btn btn-outline">
