--- a/imprint.html
+++ b/imprint.html
@@ -98,6 +98,122 @@
                 </div>
             </div>
         </div>
+        <div class="popup">
+            <div class="popup-overlay" data-popup="close"></div>
+            <div class="popup-main">
+                <div class="popup-inner">
+                    <div class="popup-info">
+                        <h3 class="heading h2 popup-info-title">
+                            Get in touch
+                        </h3>
+                        <div class="popup-info-inner hidden-mb">
+                            <div class="popup-info-item">
+                                <div class="txt txt-18 txt-med popup-info-item-label">
+                                    Support
+                                </div>
+                                <a href="mailto:info@space-ship.world" class="txt txt-18 popup-info-item-link">
+                                    info@space-ship.world
+                                </a>
+                            </div>
+                            <div class="popup-info-item">
+                                <div class="txt txt-18 txt-med popup-info-item-label">
+                                    Call us
+                                </div>
+                                <a href="tel:+49 151 66113142" class="txt txt-18 popup-info-item-link">
+                                    +49 151 66113142
+                                </a>
+                            </div>
+                            <div class="line line-vert"></div>
+                        </div>
+                    </div>
+                    <div class="popup-form">
+                        <form action="#" class="popup-form-inner">
+                            <div class="popup-form-fields" data-lenis-prevent>
+                                <div class="popup-input-grp">
+                                    <label for="firstname" class="txt txt-14 txt-med popup-input-label">
+                                        First name
+                                    </label>
+                                    <input type="text" name="firstname" class="txt txt-16 popup-input-field" placeholder="Ex: John" required="required">
+                                    <div class="line"><div class="line-inner"></div></div>
+                                </div>
+                                <div class="popup-input-grp">
+                                    <label for="lastname" class="txt txt-14 txt-med popup-input-label">
+                                        Last name
+                                    </label>
+                                    <input type="text" name="lastname" class="txt txt-16 popup-input-field" placeholder="Ex: Doe" required="required">
+                                    <div class="line"><div class="line-inner"></div></div>
+                                </div>
+                                <div class="popup-input-grp">
+                                    <label for="email" class="txt txt-14 txt-med popup-input-label">
+                                        Email
+                                    </label>
+                                    <input type="email" name="email" class="txt txt-16 popup-input-field" placeholder="Ex: johndoe@example.com" required="required">
+                                    <div class="line"><div class="line-inner"></div></div>
+                                </div>
+                                <div class="popup-input-grp">
+                                    <label for="fname" class="txt txt-14 txt-med popup-input-label">
+                                        Company <span class="txt-opt">(Optional)</span>
+                                    </label>
+                                    <input type="text" name="company" class="txt txt-16 popup-input-field" placeholder="Ex: Google">
+                                    <div class="line"><div class="line-inner"></div></div>
+                                </div>
+                                <div class="popup-input-grp textarea-grp">
+                                    <label for="fname" class="txt txt-14 txt-med popup-input-label">
+                                        Message <span class="txt-opt">(Optional)</span>
+                                    </label>
+                                    <textarea type="text" name="message" class="txt txt-16 popup-input-field" placeholder=""></textarea>
+                                    <div class="line"><div class="line-inner"></div></div>
+                                </div>
+                            </div>
+                            <div class="popup-form-btn-wrap">
+                                <button type="submit" class="btn popup-form-submit">
+                                    <div class="txt txt-16 txt-btn txt-med popup-form-submit-txt">Send</div>
+                                </button>
+                            </div>
+                        </form>
+                        <div class="popup-form-succ hidden">
+                            <div class="txt txt-24 popup-form-succ-title">
+                                Thank you, <span data-form-name>David</span>!
+                            </div>
+                            <div class="txt txt-16 popup-form-succ-sub">
+                                We appreciate your interest and will get back to you shortly. 
+                            </div>
+                            <div class="popup-form-succ-btn-wrap">
+                                <a href="#" class="btn popup-form-succ-btn" data-popup="close">
+                                    <div class="txt txt-16 txt-btn txt-med">Close panel</div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="popup-info-inner hidden-dk">
+                            <div class="popup-info-item">
+                                <div class="txt txt-18 txt-med popup-info-item-label">
+                                    Support
+                                </div>
+                                <a href="mailto:info@space-ship.world" class="txt txt-18 popup-info-item-link">
+                                    info@space-ship.world
+                                </a>
+                            </div>
+                            <div class="popup-info-item">
+                                <div class="txt txt-18 txt-med popup-info-item-label">
+                                    Call us
+                                </div>
+                                <a href="tel:+49 151 66113142" class="txt txt-18 popup-info-item-link">
+                                    +49 151 66113142
+                                </a>
+                            </div>
+                    </div>
+                </div>
+                <a href="#" class="btn-ic popup-close" data-popup="close">
+                    <div class="icon icon-16">
+                        <svg width="100%" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M13 3L3 13" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M3 3L13 13" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                </a>
+            </div>
+        </div>
         <div class="main" data-barba="container" data-barba-namespace="term" data-namespace="imprint" data-header="dark">
             <section class="term-hero">
                 <div class="container grid">
@@ -172,8 +288,8 @@
                                 We are prepared and committed to discovering tailored solutions for your needs.
                             </p>
                             <div class="ft-abt-info-btn-wrap hidden-tb">
-                                <a href="#" class="btn btn-outline" data-popup="open">
-                                    <div class="txt txt-16 txt-med">Get in touch</div>
+                                <a href="#" class="btn btn-outline">
+                                    <div class="txt txt-16 txt-med" data-popup="open">Get in touch</div>
                                 </a>
                             </div>
                         </div>
@@ -194,8 +310,8 @@
                                     <input type="email" class="txt txt-20 input-field" name="email" placeholder="Enter your email">
                                 </div>
                                 <div class="ft-abt-form-btn-wrap">
-                                    <button type="submit" class="btn btn-outline">
-                                        <div class="txt txt-16 txt-med txt-btn">Subscribe</div>
+                                    <button type="submit" class="btn btn-outline ft-abt-form-submit">
+                                        <div class="txt txt-16 txt-med txt-btn ft-abt-form-submit-txt">Subscribe</div>
                                         <div class="icon icon-24 btn-submit-ic">
                                             <svg width="100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M4.5 12H19.5M19.5 12L12.75 5.25M19.5 12L12.75 18.75" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -270,7 +386,7 @@
                                 </a>
                             </li>
                             <li class="ft-menu-link">
-                                <a href="./about.html" class="heading h5 ft-menu-link-txt" data-link="about">
+                                <a href="/about.html" class="heading h5 ft-menu-link-txt" data-link="about">
                                     About
                                     <div class="line">
                                         <div class="line-inner"></div>
