--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                         </div>
                     </div>
                     <div class="home-hero-btn-wrap">
-                        <a href="#" class="btn">
+                        <a href="./solution.html" class="btn">
                             <div class="txt txt-16 txt-btn txt-med">Discover now!</div>
                         </a>
                     </div>
@@ -486,7 +486,7 @@
                             Industry-first ETA <br>Prediction tailored to ports 
                         </h2>
                         <div class="home-sol-btn-wrap">
-                            <a href="#" class="btn btn-white">
+                            <a href="./solution.html" class="btn btn-white">
                                 <div class="txt txt-16 txt-btn txt-med">
                                     Discover now!
                                 </div>
@@ -525,7 +525,7 @@
                             High Technology Makes Us Different.
                         </h2>
                         <div class="home-tech-btn-wrap hidden-mb">
-                            <a href="#" class="btn btn-outline">
+                            <a href="./solution.html" class="btn btn-outline">
                                 <div class="txt txt-16 txt-med">
                                     Discover How it works
                                 </div>
