--- a/solution.html
+++ b/solution.html
@@ -262,14 +262,16 @@
             </section>
             <section class="sol-fea">
                 <div class="container grid">
-                    <div class="sol-fea-title-wrap">
-                        <h2 class="heading h2 sol-fea-title">
-                            Highlight features
-                        </h2>
-                        <span class="decor-slash"></span>
-                    </div>
                     <div class="sol-fea-main">
                         <div class="sol-fea-main-inner">
+                            <div class="sol-fea-title-wrap">
+                                <div class="heading h6 sol-fea-sub">
+                                    Highlight features
+                                </div>
+                                <h2 class="heading h2 sol-fea-title">
+                                    Arrival-X: Discover Key Advantages
+                                </h2>
+                            </div>
                             <div class="sol-fea-main-item">
                                 <div class="icon icon-100 sol-fea-main-item-ic">
                                     <img src="./imgs/sol-fea-1.svg" alt="Smart search">
@@ -281,108 +283,6 @@
                                     <p class="txt txt-20 sol-fea-main-item-sub">
                                         Look up any ship across the world and see all of its navigation-related information
                                     </p>
-                                </div>
-                            </div>
-                            <div class="sol-fea-main-item">
-                                <div class="icon icon-100 sol-fea-main-item-ic">
-                                    <img src="./imgs/sol-fea-1.svg" alt="Smart search">
-                                </div>
-                                <div class="sol-fea-main-item-content">
-                                    <h3 class="heading h6 sol-fea-main-item-title">
-                                        Smart search
-                                    </h3>
-                                    <div class="txt txt-20 sol-fea-main-item-sub">
-                                        <ul>
-                                            <li>Add any ship to your database</li>
-                                            <li>Categorize the database</li>
-                                            <li>Export, share and compare ships data</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="sol-fea-main-item">
-                                <div class="icon icon-100 sol-fea-main-item-ic">
-                                    <img src="./imgs/sol-fea-1.svg" alt="Smart search">
-                                </div>
-                                <div class="sol-fea-main-item-content">
-                                    <h3 class="heading h6 sol-fea-main-item-title">
-                                        Smart search
-                                    </h3>
-                                    <div class="txt txt-20 sol-fea-main-item-sub">
-                                        <ul>
-                                            <li>Add any ship to your database</li>
-                                            <li>Categorize the database</li>
-                                            <li>Export, share and compare ships data</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="sol-fea-main-item">
-                                <div class="icon icon-100 sol-fea-main-item-ic">
-                                    <img src="./imgs/sol-fea-1.svg" alt="Smart search">
-                                </div>
-                                <div class="sol-fea-main-item-content">
-                                    <h3 class="heading h6 sol-fea-main-item-title">
-                                        Smart search
-                                    </h3>
-                                    <div class="txt txt-20 sol-fea-main-item-sub">
-                                        <ul>
-                                            <li>Add any ship to your database</li>
-                                            <li>Categorize the database</li>
-                                            <li>Export, share and compare ships data</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="sol-fea-main-item">
-                                <div class="icon icon-100 sol-fea-main-item-ic">
-                                    <img src="./imgs/sol-fea-1.svg" alt="Smart search">
-                                </div>
-                                <div class="sol-fea-main-item-content">
-                                    <h3 class="heading h6 sol-fea-main-item-title">
-                                        Smart search
-                                    </h3>
-                                    <div class="txt txt-20 sol-fea-main-item-sub">
-                                        <ul>
-                                            <li>Add any ship to your database</li>
-                                            <li>Categorize the database</li>
-                                            <li>Export, share and compare ships data</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="sol-fea-main-item">
-                                <div class="icon icon-100 sol-fea-main-item-ic">
-                                    <img src="./imgs/sol-fea-1.svg" alt="Smart search">
-                                </div>
-                                <div class="sol-fea-main-item-content">
-                                    <h3 class="heading h6 sol-fea-main-item-title">
-                                        Smart search
-                                    </h3>
-                                    <div class="txt txt-20 sol-fea-main-item-sub">
-                                        <ul>
-                                            <li>Add any ship to your database</li>
-                                            <li>Categorize the database</li>
-                                            <li>Export, share and compare ships data</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="sol-fea-main-item">
-                                <div class="icon icon-100 sol-fea-main-item-ic">
-                                    <img src="./imgs/sol-fea-1.svg" alt="Smart search">
-                                </div>
-                                <div class="sol-fea-main-item-content">
-                                    <h3 class="heading h6 sol-fea-main-item-title">
-                                        Smart search
-                                    </h3>
-                                    <div class="txt txt-20 sol-fea-main-item-sub">
-                                        <ul>
-                                            <li>Add any ship to your database</li>
-                                            <li>Categorize the database</li>
-                                            <li>Export, share and compare ships data</li>
-                                        </ul>
-                                    </div>
                                 </div>
                             </div>
                         </div>
