--- a/term.html
+++ b/term.html
@@ -240,7 +240,7 @@
                             Information We Collect
                         </h3>
                         <h4 class="txt txt-20 txt-med">
-                            This is a H3 title
+                            Types of Information We Collect
                         </h4>
                         <p class="txt txt-18">
                             We collect information to provide and improve our services and enhance your user experience. The types of information we collect include:
@@ -257,7 +257,7 @@
                             </li>
                         </ul>
                         <h4 class="txt txt-20 txt-med">
-                            This is a H3 title
+                            Our Data Handling Policy
                         </h4>
                         <p class="txt txt-18">
                             This may include your name, email address, contact information, and any other information you voluntarily provide to us. Usage Data: We collect information about how you interact with our services, such as pages visited, features used, and other actions taken. Device Information: We may collect information about the device you use to access our services, including the device type, operating system, and unique device identifiers.
