--- a/insight.html
+++ b/insight.html
@@ -364,7 +364,7 @@
                         </div>
                         <div class="ft-abt-form-wrap">
                             <div class="ft-abt-info-btn-wrap hidden-dk">
-                                <a href="#" class="btn btn-outline">
+                                <a href="#" class="btn btn-outline" data-popup="open">
                                     <div class="txt txt-16 txt-med">Get in touch</div>
                                 </a>
                             </div>
