--- a/imprint.html
+++ b/imprint.html
@@ -288,8 +288,8 @@
                                 We are prepared and committed to discovering tailored solutions for your needs.
                             </p>
                             <div class="ft-abt-info-btn-wrap hidden-tb">
-                                <a href="#" class="btn btn-outline">
-                                    <div class="txt txt-16 txt-med" data-popup="open">Get in touch</div>
+                                <a href="#" class="btn btn-outline" data-popup="open">
+                                    <div class="txt txt-16 txt-med">Get in touch</div>
                                 </a>
                             </div>
                         </div>
@@ -435,7 +435,7 @@
                 </div>
             </div>
             <div class="ft-bg">
-                <video muted preload loop autoplay class="vid-bg">
+                <video muted preload loop autoplay playsinline class="vid-bg">
                     <source src="./imgs/ft-bg.mp4" type="video/mp4">
                 </video>
             </div>
