--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                         </div>
                     </div>
                     <div class="home-tech-btn-wrap hidden-dk">
-                        <a href="#" class="btn btn-outline">
+                        <a href="./solution.html" class="btn btn-outline">
                             <div class="txt txt-16 txt-btn txt-med">
                                 Discover How it works
                             </div>
@@ -576,6 +576,9 @@
                     </div>
                     <div class="home-faq-content">
                         <span class="decor-slash"></span>
+                        <div class="label-wrap home-faq-label">
+                            <div class="txt txt-16 txt-med">Benefits</div>
+                        </div>
                         <h2 class="heading h3 home-faq-title">
                             Our solutions are designed to address real-world challenges and deliver tangible benefits.
                         </h2>
@@ -672,14 +675,14 @@
                             Contact us
                         </div>
                         <div class="ft-ctc-grp-li">
-                            <a href="tel:004915166113142" class="ft-ctc-link">
+                            <a href="tel:+49 151 66113142" class="ft-ctc-link">
                                 <div class="icon icon-20 ft-ctc-link-ic">
                                     <svg width="100%" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M4 4L16 9.57433L4 15L6.4 9.57432L4 4Z" fill="currentColor"/>
                                     </svg>
                                 </div>
                                 <div class="heading h6 ft-ctc-link-txt">
-                                    0049 151 66113142
+                                    +49 151 66113142
                                 </div>
                             </a>
                             <a href="mailto:info@space-ship.world" class="ft-ctc-link">
