--- a/about.html
+++ b/about.html
@@ -847,14 +847,14 @@
                             Contact us
                         </div>
                         <div class="ft-ctc-grp-li">
-                            <a href="tel:004915166113142" class="ft-ctc-link">
+                            <a href="tel:+49 151 66113142" class="ft-ctc-link">
                                 <div class="icon icon-20 ft-ctc-link-ic">
                                     <svg width="100%" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M4 4L16 9.57433L4 15L6.4 9.57432L4 4Z" fill="currentColor"/>
                                     </svg>
                                 </div>
                                 <div class="heading h6 ft-ctc-link-txt">
-                                    0049 151 66113142
+                                    +49 151 66113142
                                 </div>
                             </a>
                             <a href="mailto:info@space-ship.world" class="ft-ctc-link">
