--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
                                 <span class="txt txt-16 header-link-div">/</span>
                             </li>
                             <li class="header-link-item">
-                                <a href="./" class="txt txt-16 txt-med header-link-txt" data-link="about">About
+                                <a href="./about.html" class="txt txt-16 txt-med header-link-txt" data-link="about">About
                                     <div class="line">
                                         <div class="line-inner"></div>
                                     </div>
@@ -89,6 +89,15 @@
                 </div>
             </div>
         </header>
+        <div class="cursor">
+            <div class="cursor-wrap">
+                <div class="cursor-inner">
+                    <div class="txt txt-16 cursor-txt">
+                        Drag
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="popup">
             <div class="popup-overlay" data-popup="close"></div>
             <div class="popup-main">
@@ -102,7 +111,7 @@
                                 <div class="txt txt-18 txt-med popup-info-item-label">
                                     Support
                                 </div>
-                                <a href="mailto:info@space-ship.world" class="txt txt-18 popup-info-item-link">
+                                <a href="mailto:info@space-ship.world" class="txt txt-18 popup-info-item-link" data-replace="email">
                                     info@space-ship.world
                                 </a>
                             </div>
@@ -110,7 +119,7 @@
                                 <div class="txt txt-18 txt-med popup-info-item-label">
                                     Call us
                                 </div>
-                                <a href="tel:+49 151 66113142" class="txt txt-18 popup-info-item-link">
+                                <a href="tel:+49 151 66113142" class="txt txt-18 popup-info-item-link" data-replace="tel">
                                     +49 151 66113142
                                 </a>
                             </div>
@@ -181,7 +190,7 @@
                                 <div class="txt txt-18 txt-med popup-info-item-label">
                                     Support
                                 </div>
-                                <a href="mailto:info@space-ship.world" class="txt txt-18 popup-info-item-link">
+                                <a href="mailto:info@space-ship.world" class="txt txt-18 popup-info-item-link" data-replace="email">
                                     info@space-ship.world
                                 </a>
                             </div>
@@ -189,7 +198,7 @@
                                 <div class="txt txt-18 txt-med popup-info-item-label">
                                     Call us
                                 </div>
-                                <a href="tel:+49 151 66113142" class="txt txt-18 popup-info-item-link">
+                                <a href="tel:+49 151 66113142" class="txt txt-18 popup-info-item-link" data-replace="tel">
                                     +49 151 66113142
                                 </a>
                             </div>
@@ -203,15 +212,6 @@
                         </svg>
                     </div>
                 </a>
-            </div>
-        </div>
-        <div class="cursor">
-            <div class="cursor-wrap">
-                <div class="cursor-inner">
-                    <div class="txt txt-16 cursor-txt">
-                        Drag
-                    </div>
-                </div>
             </div>
         </div>
         <div class="main" data-barba="container" data-barba-namespace="notfound" data-namespace="notfound">
@@ -302,7 +302,7 @@
                             Contact us
                         </div>
                         <div class="ft-ctc-grp-li">
-                            <a href="tel:+49 151 66113142" class="ft-ctc-link">
+                            <a href="tel:+49 151 66113142" class="ft-ctc-link" data-replace="tel">
                                 <div class="icon icon-20 ft-ctc-link-ic">
                                     <svg width="100%" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M4 4L16 9.57433L4 15L6.4 9.57432L4 4Z" fill="currentColor"/>
@@ -312,7 +312,7 @@
                                     +49 151 66113142
                                 </div>
                             </a>
-                            <a href="mailto:info@space-ship.world" class="ft-ctc-link">
+                            <a href="mailto:info@space-ship.world" class="ft-ctc-link" data-replace="email">
                                 <div class="icon icon-20 ft-ctc-link-ic">
                                     <svg width="100%" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M4 4L16 9.57433L4 15L6.4 9.57432L4 4Z" fill="currentColor"/>
@@ -329,20 +329,25 @@
                             Head Office
                         </div>
                         <div class="ft-ctc-grp-li">
-                            <div class="ft-ctc-link">
+                            <a href=#" class="ft-ctc-link" data-replace="address">
                                 <div class="icon icon-20 ft-ctc-link-ic">
                                     <svg width="100%" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M4 4L16 9.57433L4 15L6.4 9.57432L4 4Z" fill="currentColor"/>
                                     </svg>
                                 </div>
-                                <div class="heading h6 ft-ctc-link-txt">
-                                    Munich, Germany
+                                <div class="heading h6 ft-ctc-link-txt ft-ctc-link-txt-add">
+                                    A1.22, Agnes-Pockels-Bogen 1, 80992 Munich, Germany
                                 </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
                     <div class="ft-ctc-btn-wrap">
-                        <a href="https://www.linkedin.com/company/space-ship/" class="btn btn-outline btn-sm" target="_blank">
+                        <a href="https://www.linkedin.com/company/space-ship/" class="btn btn-outline btn-sm btn-w-ic-sm" target="_blank" data-replace="linkedin">
+                            <div class="icon icon-16">
+                                <svg width="100%" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M0.666992 2.39208C0.666992 2.0671 0.79609 1.75544 1.02588 1.52564C1.25568 1.29585 1.56735 1.16675 1.89233 1.16675H14.107C14.268 1.16649 14.4276 1.19799 14.5764 1.25946C14.7253 1.32093 14.8606 1.41116 14.9745 1.52497C15.0884 1.63879 15.1788 1.77397 15.2404 1.92276C15.3021 2.07155 15.3337 2.23103 15.3337 2.39208V14.6067C15.3338 14.7678 15.3022 14.9274 15.2407 15.0762C15.1792 15.2251 15.0889 15.3604 14.975 15.4743C14.8611 15.5882 14.7259 15.6786 14.5771 15.7402C14.4283 15.8018 14.2687 15.8335 14.1077 15.8334H1.89233C1.73136 15.8334 1.57196 15.8017 1.42326 15.7401C1.27455 15.6785 1.13944 15.5881 1.02565 15.4743C0.911857 15.3604 0.821613 15.2253 0.760074 15.0765C0.698534 14.9278 0.666905 14.7684 0.666992 14.6074V2.39208ZM6.47233 6.75875H8.45833V7.75608C8.74499 7.18275 9.47833 6.66675 10.5803 6.66675C12.693 6.66675 13.1937 7.80875 13.1937 9.90408V13.7854H11.0557V10.3814C11.0557 9.18808 10.769 8.51475 10.041 8.51475C9.03099 8.51475 8.61099 9.24075 8.61099 10.3814V13.7854H6.47233V6.75875ZM2.80566 13.6941H4.94433V6.66675H2.80566V13.6941ZM5.25033 4.37475C5.25436 4.55786 5.22177 4.73994 5.15449 4.91029C5.0872 5.08064 4.98656 5.23584 4.85848 5.36677C4.7304 5.4977 4.57746 5.60173 4.40863 5.67275C4.2398 5.74378 4.05849 5.78036 3.87533 5.78036C3.69217 5.78036 3.51085 5.74378 3.34202 5.67275C3.17319 5.60173 3.02025 5.4977 2.89217 5.36677C2.76409 5.23584 2.66345 5.08064 2.59617 4.91029C2.52888 4.73994 2.49629 4.55786 2.50033 4.37475C2.50824 4.01532 2.65658 3.67328 2.91358 3.42187C3.17058 3.17047 3.51581 3.02969 3.87533 3.02969C4.23484 3.02969 4.58007 3.17047 4.83707 3.42187C5.09407 3.67328 5.24241 4.01532 5.25033 4.37475Z" fill="currentColor"/>
+                                </svg>
+                            </div>
                             <div class="txt txt-16 txt-med">linkedin</div>
                         </a>
                     </div>
